spellingscontrole content/glossary

--- a/style.css
+++ b/style.css
@@ -217,6 +217,10 @@ article a {
     text-decoration: none;
 }
 
+article a:hover {
+    text-decoration: underline;
+}
+
 article h4 {
     color: var(--accent-main);
 }
