--- a/style.css
+++ b/style.css
@@ -273,6 +273,7 @@ article > :last-child {
 
 /* Footer */
 footer p {
+    font-family: 'EB Garmond', serif;
     margin-top: 3rem;
     color: var(--base-30);
     font-style: italic;
@@ -321,41 +322,39 @@ div.glossary {
 }
 
 /* cards, Hier is gekozen om flexbox te gebruiken in plaats van float voor de flexibiliteit */
-div.photos {
+div.test {
     width: 100%;
     display: flex;
     align-items: center;
 }
 
 .photos div {
-    height: 100%; 
-    margin: 0 1rem 1rem 0;
-}
-
-.three-img div {
-    width: 33.3%;
-}
-
-.two-img div {
-    width: 50%;
-}
-
-.photos div:hover {
-    border: 1px solid var(--accent-main);
+    margin-bottom: 1rem;
+    flex: 1;
 }
 
 .photos img {
     width: 100%;
 }
 
+.photos div:not(:last-child) {
+    margin-right: 1rem;
+}
+
+div.photos {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+
+.photos div:hover {
+    border: 1px solid var(--accent-main);
+}
+
 .photos p {
     text-align: center;
     font-style: italic;
-}
-
-.kleurenstaal div {
-    height: 100%;
-    width: 10%;
 }
 
 /* responsive design */
